--- a/spec/resultados_rspec.html
+++ b/spec/resultados_rspec.html
@@ -288,35 +288,13 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">Testes de preenchimento do model Arduino</dt>
     <script type="text/javascript">moveProgressBar('50.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">name consegue ser preenchido?</span><span class='duration'>0.03154s</span></dd>
-    <script type="text/javascript">makeRed('rspec-header');</script>
-    <script type="text/javascript">makeRed('div_group_2');</script>
-    <script type="text/javascript">makeRed('example_group_2');</script>
+    <dd class="example passed"><span class="passed_spec_name">name consegue ser preenchido?</span><span class='duration'>0.04265s</span></dd>
     <script type="text/javascript">moveProgressBar('100.0');</script>
-    <dd class="example failed">
-      <span class="failed_spec_name">description consegue ser preenchido?</span>
-      <span class="duration">0.00621s</span>
-      <div class="failure" id="failure_1">
-        <div class="message"><pre>  Failure/Error: expect(@arduino.description).to eq(&#39;arduino mais usado&#39;)
-
-    expected: &quot;arduino mais usado&quot;
-         got: &quot;&quot;
-
-    (compared using ==)
-  # ./spec/models/arduino_spec.rb:16:in `block (3 levels) in &lt;top (required)&gt;&#39;</pre></div>
-        <div class="backtrace"><pre>./spec/models/arduino_spec.rb:16:in `block (3 levels) in &lt;top (required)&gt;&#39;</pre></div>
-    <pre class="ruby"><code><span class="linenum">14</span>    it 'description consegue ser preenchido?' do
-<span class="linenum">15</span>      @arduino.description = ''
-<span class="offending"><span class="linenum">16</span>      expect(@arduino.description).to eq('arduino mais usado')</span>
-<span class="linenum">17</span>    end
-<span class="linenum">18</span>
-<span class="linenum">19</span><span class="comment"># Install the coderay gem to get syntax highlighting</span></code></pre>
-      </div>
-    </dd>
+    <dd class="example passed"><span class="passed_spec_name">description consegue ser preenchido?</span><span class='duration'>0.00110s</span></dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.04812 seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "2 examples, 1 failure";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.04718 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "2 examples, 0 failures";</script>
 </div>
 </div>
 </body>
