--- a/spec/resultados_rspec.html
+++ b/spec/resultados_rspec.html
@@ -287,35 +287,62 @@ a {
 <div id="div_group_2" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">GET /api/v1/arduinos</dt>
-    <script type="text/javascript">moveProgressBar('20.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">Consegue listar todos os arduinos e retornar status 200?</span><span class='duration'>0.05419s</span></dd>
+    <script type="text/javascript">moveProgressBar('16.6');</script>
+    <dd class="example passed"><span class="passed_spec_name">Consegue listar todos os arduinos e retornar status 200?</span><span class='duration'>0.05157s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
-  <dl style="margin-left: 0px;">
-  <dt id="example_group_3" class="passed">Arduino</dt>
+  <dl style="margin-left: 15px;">
+  <dt id="example_group_3" class="passed">GET /api/v1/arduinos/id</dt>
+    <script type="text/javascript">makeRed('rspec-header');</script>
+    <script type="text/javascript">makeRed('div_group_3');</script>
+    <script type="text/javascript">makeRed('example_group_3');</script>
+    <script type="text/javascript">moveProgressBar('33.3');</script>
+    <dd class="example failed">
+      <span class="failed_spec_name">Consegue listar um arduino especifico e retornar status 200?</span>
+      <span class="duration">0.00352s</span>
+      <div class="failure" id="failure_1">
+        <div class="message"><pre>  Failure/Error: get :show, params: {id: @arduino.id}
+
+  AbstractController::ActionNotFound:
+    The action &#39;show&#39; could not be found for Api::V1::ArduinosController
+  # ./spec/controllers/arduinos_controller_v1_spec.rb:17:in `block (3 levels) in &lt;top (required)&gt;&#39;</pre></div>
+        <div class="backtrace"><pre>./spec/controllers/arduinos_controller_v1_spec.rb:17:in `block (3 levels) in &lt;top (required)&gt;&#39;</pre></div>
+    <pre class="ruby"><code><span class="linenum">15</span>  describe 'GET /api/v1/arduinos/id' do
+<span class="linenum">16</span>    it 'Consegue listar um arduino especifico e retornar status 200?' do
+<span class="offending"><span class="linenum">17</span>      get :show, params: {id: @arduino.id}</span>
+<span class="linenum">18</span>      expect(response.body).to include_json(id: @arduino.id)
+<span class="linenum">19</span>      expect(response).to have_http_status(200)
+<span class="linenum">20</span><span class="comment"># Install the coderay gem to get syntax highlighting</span></code></pre>
+      </div>
+    </dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
-  <dl style="margin-left: 15px;">
-  <dt id="example_group_4" class="passed">Testes de preenchimento do model Arduino</dt>
-    <script type="text/javascript">moveProgressBar('40.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">name consegue ser preenchido?</span><span class='duration'>0.00137s</span></dd>
-    <script type="text/javascript">moveProgressBar('60.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">description consegue ser preenchido?</span><span class='duration'>0.00166s</span></dd>
+  <dl style="margin-left: 0px;">
+  <dt id="example_group_4" class="passed">Arduino</dt>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
-  <dt id="example_group_5" class="passed">Testes de validação do model Arduino</dt>
-    <script type="text/javascript">moveProgressBar('80.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">arduino valido com campos obrigatorios preenchidos?</span><span class='duration'>0.00129s</span></dd>
-    <script type="text/javascript">moveProgressBar('100.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">arduino invalido com campos obrigatorios não preenchidos?</span><span class='duration'>0.00264s</span></dd>
+  <dt id="example_group_5" class="passed">Testes de preenchimento do model Arduino</dt>
+    <script type="text/javascript">moveProgressBar('50.0');</script>
+    <dd class="example passed"><span class="passed_spec_name">name consegue ser preenchido?</span><span class='duration'>0.00112s</span></dd>
+    <script type="text/javascript">moveProgressBar('66.6');</script>
+    <dd class="example passed"><span class="passed_spec_name">description consegue ser preenchido?</span><span class='duration'>0.00088s</span></dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.06901 seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "5 examples, 0 failures";</script>
+<div id="div_group_6" class="example_group passed">
+  <dl style="margin-left: 15px;">
+  <dt id="example_group_6" class="passed">Testes de validação do model Arduino</dt>
+    <script type="text/javascript">moveProgressBar('83.3');</script>
+    <dd class="example passed"><span class="passed_spec_name">arduino valido com campos obrigatorios preenchidos?</span><span class='duration'>0.00101s</span></dd>
+    <script type="text/javascript">moveProgressBar('100.0');</script>
+    <dd class="example passed"><span class="passed_spec_name">arduino invalido com campos obrigatorios não preenchidos?</span><span class='duration'>0.00201s</span></dd>
+  </dl>
+</div>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.07221 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "6 examples, 1 failure";</script>
 </div>
 </div>
 </body>
