--- a/spec/resultados_rspec.html
+++ b/spec/resultados_rspec.html
@@ -288,48 +288,28 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_2" class="passed">GET /api/v1/arduinos</dt>
     <script type="text/javascript">moveProgressBar('12.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">Consegue listar todos os arduinos e retornar status 200?</span><span class='duration'>0.04485s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">Consegue listar todos os arduinos e retornar status 200?</span><span class='duration'>0.04347s</span></dd>
   </dl>
 </div>
 <div id="div_group_3" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_3" class="passed">GET /api/v1/arduinos/id</dt>
     <script type="text/javascript">moveProgressBar('25.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">Consegue listar um arduino especifico e retornar status 200?</span><span class='duration'>0.00536s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">Consegue listar um arduino especifico e retornar status 200?</span><span class='duration'>0.00601s</span></dd>
   </dl>
 </div>
 <div id="div_group_4" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_4" class="passed">POST /api/v1/arduinos</dt>
     <script type="text/javascript">moveProgressBar('37.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">Consegue criar um arduino e retornar status 201?</span><span class='duration'>0.00979s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">Consegue criar um arduino e retornar status 201?</span><span class='duration'>0.00941s</span></dd>
   </dl>
 </div>
 <div id="div_group_5" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_5" class="passed">PATCH /api/v1/arduinos/id</dt>
-    <script type="text/javascript">makeRed('rspec-header');</script>
-    <script type="text/javascript">makeRed('div_group_5');</script>
-    <script type="text/javascript">makeRed('example_group_5');</script>
     <script type="text/javascript">moveProgressBar('50.0');</script>
-    <dd class="example failed">
-      <span class="failed_spec_name">Consegue atualizar um arduino e retornar status 200?</span>
-      <span class="duration">0.00858s</span>
-      <div class="failure" id="failure_1">
-        <div class="message"><pre>  Failure/Error: patch :update, params: {arduino: {name: &#39;lilipad&#39;, description: &#39;placa circular&#39;}, id: arduino.id}
-
-  AbstractController::ActionNotFound:
-    The action &#39;update&#39; could not be found for Api::V1::ArduinosController
-  # ./spec/controllers/arduinos_controller_v1_spec.rb:34:in `block (3 levels) in &lt;top (required)&gt;&#39;</pre></div>
-        <div class="backtrace"><pre>./spec/controllers/arduinos_controller_v1_spec.rb:34:in `block (3 levels) in &lt;top (required)&gt;&#39;</pre></div>
-    <pre class="ruby"><code><span class="linenum">32</span>    it 'Consegue atualizar um arduino e retornar status 200?' do
-<span class="linenum">33</span>      arduino = Arduino.last
-<span class="offending"><span class="linenum">34</span>      patch :update, params: {arduino: {name: 'lilipad', description: 'placa circular'}, id: arduino.id}</span>
-<span class="linenum">35</span>      expect(response.body).to include_json(name: 'lilipad')
-<span class="linenum">36</span>      expect(response).to have_http_status(200)
-<span class="linenum">37</span><span class="comment"># Install the coderay gem to get syntax highlighting</span></code></pre>
-      </div>
-    </dd>
+    <dd class="example passed"><span class="passed_spec_name">Consegue atualizar um arduino e retornar status 200?</span><span class='duration'>0.00773s</span></dd>
   </dl>
 </div>
 <div id="div_group_6" class="example_group passed">
@@ -341,22 +321,22 @@ a {
   <dl style="margin-left: 15px;">
   <dt id="example_group_7" class="passed">Testes de preenchimento do model Arduino</dt>
     <script type="text/javascript">moveProgressBar('62.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">name consegue ser preenchido?</span><span class='duration'>0.00091s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">name consegue ser preenchido?</span><span class='duration'>0.00097s</span></dd>
     <script type="text/javascript">moveProgressBar('75.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">description consegue ser preenchido?</span><span class='duration'>0.00063s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">description consegue ser preenchido?</span><span class='duration'>0.00076s</span></dd>
   </dl>
 </div>
 <div id="div_group_8" class="example_group passed">
   <dl style="margin-left: 15px;">
   <dt id="example_group_8" class="passed">Testes de validação do model Arduino</dt>
     <script type="text/javascript">moveProgressBar('87.5');</script>
-    <dd class="example passed"><span class="passed_spec_name">arduino valido com campos obrigatorios preenchidos?</span><span class='duration'>0.00072s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">arduino valido com campos obrigatorios preenchidos?</span><span class='duration'>0.00079s</span></dd>
     <script type="text/javascript">moveProgressBar('100.0');</script>
-    <dd class="example passed"><span class="passed_spec_name">arduino invalido com campos obrigatorios não preenchidos?</span><span class='duration'>0.00213s</span></dd>
+    <dd class="example passed"><span class="passed_spec_name">arduino invalido com campos obrigatorios não preenchidos?</span><span class='duration'>0.00186s</span></dd>
   </dl>
 </div>
-<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.09210 seconds</strong>";</script>
-<script type="text/javascript">document.getElementById('totals').innerHTML = "8 examples, 1 failure";</script>
+<script type="text/javascript">document.getElementById('duration').innerHTML = "Finished in <strong>0.07573 seconds</strong>";</script>
+<script type="text/javascript">document.getElementById('totals').innerHTML = "8 examples, 0 failures";</script>
 </div>
 </div>
 </body>
